# stagpy

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  build.sh  neo4j_demo.py  neo4j_movies.py  pyproject.toml  recompile.sh  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: github-actions-benchmark.yml  github-actions-docs.yml  github-actions-release.yml  github-actions-test-release.yml  github-actions-test.yml
dev/bench/: data.js
docs/: .gitignore  Doxyfile  DoxygenLayout.xml  conf.py  file-formats.md  getting-started.md  getting-started.rst  header.html  index.md  index.rst  neo4j.md  neo4j.rst  py_filter  reference.rst
docs/_static/css/: custom.css
docs/_static/js/: custom.js  version.js
docs/_templates/: custom-module-template-2.rst
stag/: __init__.py  cluster.py  data.py  eigen.i  graph.py  graphio.py  kde.py  lsh.py  neo4j.py  numpy.i  random.py  spectrum.py  stag_internal.i  stag_internal.py  stag_internal_wrap.cxx  stag_internal_wrap.h  std_tuple.i  utility.py
stag/stag_lib/: cluster.cpp  cluster.h  graph.cpp  graph.h  graphio.cpp  graphio.h  random.h  spectrum.cpp
stag_lib/: stag.h  utility.cpp
swig/: .gitignore  CMakeLists.txt  stag_internal.i  stag_internal.py  stag_internal_wrap.cxx
test/: context.py  test_clustering.py  test_data.py  test_graph.py  test_graphio.py  test_kde.py  test_lsh.py  test_performance.py  test_random.py  test_spectrum.py  test_utility.py
test/data/: .gitignore  temp.edgelist  test1.adjlist  test6.edgelist
